Conexion con back
Conexion con back

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         </div>
     </div>
 
+    <div id="lightbox" class="lightbox">
+        <span class="lightbox-close">&times;</span>
+        <button class="lightbox-prev">&#10094;</button>
+        <img class="lightbox-content" id="lightbox-img">
+        <button class="lightbox-next">&#10095;</button>
+    </div>
+
     <a href="#" id="scroll-to-top" class="scroll-to-top-button" aria-label="Scroll to top">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m5 12 7-7 7 7"/><path d="M12 19V5"/></svg>
     </a>
@@ -87,6 +94,7 @@
         </div>
     </footer>
 
+    <script src="js/api.js"></script>
     <script src="js/carousel.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/scroll-to-top.js"></script>
